fix broken boundaries on settings page, adjust spacing of logo in top nav

--- a/app/assets/stylesheets/_application.tailwind.css
+++ b/app/assets/stylesheets/_application.tailwind.css
@@ -87,8 +87,8 @@ body {
   right: 0;
   z-index: 40;
   padding-top: env(safe-area-inset-top);
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
+  padding-left: max(1rem, env(safe-area-inset-left));
+  padding-right: max(1rem, env(safe-area-inset-right));
 }
 
 .notification-panel-top {
